--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
+    namespace 'io.adaptant.labs.flutter_windowmanager'
 
     defaultConfig {
         minSdkVersion 16
